# DNA-DailyNewsAgent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  environment.txt  pyproject.toml  requirements.txt
.github/workflows/: daily-brief.yml  daily-news.yml
app/: __init__.py  config_loader.py  main.py
app/agents/: analyst.py  editor.py  scout.py  synthesizer.py
app/graph/: __init__.py  workflow.py
app/llm/: client.py
app/models/: __init__.py  article.py  message.py  state.py
app/tools/: __init__.py
app/tools/email_sender/: __init__.py  resend.py
app/tools/file_writer/: __init__.py  markdown.py
app/tools/news_fetch/: __init__.py  feed_subscription.py  hacker_news.py
config/: ranking.json  sources.json
docs/: sources.md
outputs/: 2026-03-17_ai_ai_agents_ai_coding.md
skills/dailynews/: SKILL.md
src/dailynews/: __init__.py  cli.py
src/dailynews/core/: __init__.py  models.py  pipeline.py
src/dailynews/ingest/: agentmail.py  collector.py  rss.py  rsshub.py
src/dailynews/llm/: openrouter.py
src/dailynews/normalize/: items.py
src/dailynews/publish/: __init__.py  email.py  email_renderer.py
src/dailynews/rank/: __init__.py  dedupe.py  scoring.py
src/dailynews/summarize/: __init__.py  brief.py
