[project]
name = "dna-dailynewsagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.15"
dependencies = []

[project.scripts]
dailynews = "dailynews.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
